// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  name="signUp"
  parseResponse={[Function]}
  path="/admin_auth"
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
  <div>
    Form
  </div>
   - Created
  <div
    setCurrentUser={[MockFunction]}
    user={
      Array [
        Object {
          "email": "foo",
        },
      ]
    }
  >
    Created
  </div>
</div>
`;

exports[`when no currentUser redirect 1`] = `
<div
  name="signUp"
  parseResponse={[Function]}
  path="/admin_auth"
  render={[Function]}
  renderCreated={[Function]}
>
  New - 
  <div>
    Form
  </div>
   - Created
  <div
    currentUser={
      Object {
        "email": "foo",
      }
    }
    setCurrentUser={[MockFunction]}
    user={
      Array [
        Object {
          "email": "foo",
        },
      ]
    }
  >
    Created
  </div>
</div>
`;
